--- a/readinglog.html
+++ b/readinglog.html
@@ -7,10 +7,29 @@
     <script type='text/javascript' src='http://epilog.stanford.edu/javascript/epilog.js'></script>
     <script type='text/javascript' src='http://worksheets.stanford.edu/javascript/worksheets.js'></script>
   </head>
+<!--=======================================================================-->
+  
+<body onload='initialize()'>
+  
+<!--=======================================================================-->
+
+<dataset id='lambda' style='font-family:courier;display:none' rows='20' cols='20'>
+</dataset>
 
 <!--=======================================================================-->
 
-<body onload='initialize()'>
+<dataset id='testdata' type='text/hrf' style='display:none'>
+</dataset>
+
+<!--=======================================================================-->
+
+<ruleset id='library' style='font-family:courier;display:none' rows='20'>
+</ruleset>
+
+<!--=======================================================================-->
+
 </body>
+
+<!--=======================================================================-->
 
 </html>
