Update readinglog.html with header

--- a/readinglog.html
+++ b/readinglog.html
@@ -11,6 +11,13 @@
   
 <body onload='initialize()'>
   
+  <!-- Create basic, centered header -->
+  <center>
+    <header>
+      <h1>College Reading Log</h1>
+    </header>
+  </center>
+  
 <!--=======================================================================-->
 
 <dataset id='lambda' style='font-family:courier;display:none' rows='20' cols='20'>
