Added header and background color

--- a/readinglog.html
+++ b/readinglog.html
@@ -10,7 +10,7 @@
   </head>
 <!--=======================================================================-->
   
-<body onload='initialize()'>
+<body style='background-color:#F5F2D9' onload='initialize()'>
   
   <!-- Create basic, centered header -->
   <center>
