Added more sections

--- a/readinglog.html
+++ b/readinglog.html
@@ -18,6 +18,19 @@
       <h1>College Reading Log</h1>
     </header>
   </center>
+
+  <!-- Main Body for Log -->
+  <center>
+    <!-- Personal Goal Section -->
+    <div style="outline: 2px solid black; padding: 7px;">
+      <h3>Personal Goals</h3>
+    </div>
+
+    <!-- Logging Section -->
+    <div style="outline: 2px solid black; padding: 7px; margin-top: 10px;">
+      <h3>Reading Schedule Breakdown</h3>
+    </div>
+  </center>
   
 <!--=======================================================================-->
 
