--- a/readinglog.html
+++ b/readinglog.html
@@ -10,7 +10,7 @@
   </head>
 <!--=======================================================================-->
   
-<body style='background-color:#F5F2D9' onload='initialize()'>
+<body style='background-color:#F6F5EB' onload='initialize()'>
   
   <!-- Create basic, centered header -->
   <center>
@@ -22,13 +22,13 @@
   <!-- Main Body for Log -->
   <center>
     <!-- Personal Goal Section -->
-    <div style="outline: 2px solid black; padding: 7px;">
-      <h3>Personal Goals</h3>
+    <div style="outline: 0.2em solid black; padding: 1em; margin: 2.5em 2.5em 2.5em 2.5em;">
+      <h2>Personal Goals</h2>
     </div>
 
     <!-- Logging Section -->
-    <div style="outline: 2px solid black; padding: 7px; margin-top: 10px;">
-      <h3>Reading Schedule Breakdown</h3>
+    <div style="outline: 0.2em solid black; padding: 1em; margin: 2.5em 2.5em 2.5em 2.5em;">
+      <h2>Reading Schedule Breakdown</h2>
     </div>
   </center>
   
