--- a/readinglog.html
+++ b/readinglog.html
@@ -27,8 +27,8 @@
       <h2>Personal Goals</h2>
     </div>
 
-    <!-- Logging Section -->
-    <div style="outline: 0.2em solid black; padding: 1em; margin: 2.5em 2.5em 2.5em 2.5em;">
+    <!-- Logging Section, no outline or framing -->
+    <div style="padding: 1em; margin: 2.5em 2.5em 2.5em 2.5em;">
       <h2>Reading Schedule Breakdown</h2>
     </div>
   </center>
