Add quarter text for personal goals

--- a/readinglog.html
+++ b/readinglog.html
@@ -24,11 +24,14 @@
   <center>
     <!-- Personal Goal Section -->
     <div style="outline: 0.2em solid black; padding: 1em; margin: 2.5em 2.5em 2.5em 2.5em;">
-      <h2>Personal Goals</h2>
+      <h2>Reading Goals (per genre)</h2>
+      <p style="text-align: left;">Autumn: </p>
+      <p style="text-align: left;">Winter: </p>
+      <p style="text-align: left;">Spring: </p>
     </div>
 
-    <!-- Logging Section, no outline or framing -->
-    <div style="padding: 1em; margin: 2.5em 2.5em 2.5em 2.5em;">
+    <!-- Logging Section -->
+    <div style="outline: 0.2em solid black; padding: 1em; margin: 2.5em 2.5em 2.5em 2.5em;">
       <h2>Reading Schedule Breakdown</h2>
     </div>
   </center>
