Added auto updating of charts

--- a/readinglog.html
+++ b/readinglog.html
@@ -39,7 +39,7 @@
           1:
           </td>
           <td style="width: 560px">
-            <select id="fall_one" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_one" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -129,7 +129,7 @@
           2:
           </td>
           <td style="width: 500px">
-            <select id="fall_two" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_two" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -223,7 +223,7 @@
           3:
           </td>
           <td style="width: 500px">
-            <select id="fall_three" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_three" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -313,7 +313,7 @@
           4:
           </td>
           <td style="width: 500px">
-            <select id="fall_four" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_four" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -407,7 +407,7 @@
           5:
           </td>
           <td style="width: 500px">
-            <select id="fall_five" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_five" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -497,7 +497,7 @@
           6:
           </td>
           <td style="width: 500px">
-            <select id="fall_six" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_six" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -591,7 +591,7 @@
           7:
           </td>
           <td style="width: 500px">
-            <select id="fall_seven" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_seven" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -681,7 +681,7 @@
           8:
           </td>
           <td style="width: 500px">
-            <select id="fall_eight" style="width: 400px" onchange="modselector(this)">
+            <select id="fall_eight" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -782,7 +782,7 @@
           1:
           </td>
           <td style="width: 560px">
-            <select id="winter_one" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_one" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -872,7 +872,7 @@
           2:
           </td>
           <td style="width: 500px">
-            <select id="winter_two" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_two" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -966,7 +966,7 @@
           3:
           </td>
           <td style="width: 500px">
-            <select id="winter_three" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_three" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1056,7 +1056,7 @@
           4:
           </td>
           <td style="width: 500px">
-            <select id="winter_four" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_four" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1150,7 +1150,7 @@
           5:
           </td>
           <td style="width: 500px">
-            <select id="winter_five" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_five" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1240,7 +1240,7 @@
           6:
           </td>
           <td style="width: 500px">
-            <select id="winter_six" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_six" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1334,7 +1334,7 @@
           7:
           </td>
           <td style="width: 500px">
-            <select id="winter_seven" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_seven" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1424,7 +1424,7 @@
           8:
           </td>
           <td style="width: 500px">
-            <select id="winter_eight" style="width: 400px" onchange="modselector(this)">
+            <select id="winter_eight" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1522,7 +1522,7 @@
           1:
           </td>
           <td style="width: 560px">
-            <select id="spring_one" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_one" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1612,7 +1612,7 @@
           2:
           </td>
           <td style="width: 500px">
-            <select id="spring_two" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_two" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1706,7 +1706,7 @@
           3:
           </td>
           <td style="width: 500px">
-            <select id="spring_three" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_three" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1796,7 +1796,7 @@
           4:
           </td>
           <td style="width: 500px">
-            <select id="spring_four" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_four" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1890,7 +1890,7 @@
           5:
           </td>
           <td style="width: 500px">
-            <select id="spring_five" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_five" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -1980,7 +1980,7 @@
           6:
           </td>
           <td style="width: 500px">
-            <select id="spring_six" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_six" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -2074,7 +2074,7 @@
           7:
           </td>
           <td style="width: 500px">
-            <select id="spring_seven" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_seven" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
@@ -2164,7 +2164,7 @@
           8:
           </td>
           <td style="width: 500px">
-            <select id="spring_eight" style="width: 400px" onchange="modselector(this)">
+            <select id="spring_eight" style="width: 400px" onchange="modselector(this); updatecharts();">
                 <option value="unknown"></option>
                 <option value="horror" disabled>Horror</option>
                 <option value="dracula">"Dracula" by Bram Stoker (418, easy)</option>
