--- a/readinglog.html
+++ b/readinglog.html
@@ -370,11 +370,11 @@ book(lahorde, french, male, 688, 3)
 book(lepee, french, male, 800, 3)
 
 book(memorias, spanish, female, 416, 1)
-book(cronicas, spanish, male, 208, 1)
+book(narnia, spanish, male, 208, 1)
 book(elprincipe, spanish, male, 232, 1)
 book(pedroparamo, spanish, male, 124, 2)
 book(laslagrimas, spanish, male, 320, 2)
-book(cronicas, spanish, female, 304, 2)
+book(torre, spanish, female, 304, 2)
 book(laciudad, spanish, male, 416, 3)
 book(ellaberinto, spanish, male, 928, 3)
 book(eltemor, spanish, male, 1040, 3)
